[package]
name = "hangman"
version = "0.1.0"
authors = ["Kesavan Yogeswaran"]
edition = "2021"

[dependencies]
cfg-if = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1"
defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["nightly"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "nrf52840", "unstable-pac", "time-driver-rtc1", "gpiote", "defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "generic-queue-8", "defmt"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"]}
fix-hidden-lifetime-bug = "0.2.5"
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = ["nrf52840", "s113", "ble-gatt-server", "ble-peripheral", "critical-section-impl", "defmt"] }
nrf52840-hal = { version = "0.16.0", default-features = false }
once_cell = { version = "1.17", default-features = false, features = ["critical-section"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8", default-features = false, features = ["nightly"] }
static_cell = "1"
zerocopy = "0.6"

[profile.release]
# 1 minimum for backtraces?
# 2 allows for location information for each defmt print
debug = 2
