[package]
name = "hangman"
version = "0.1.0"
authors = ["Kesavan Yogeswaran"]
edition = "2021"

[dependencies]
aligned = "0.4"
arrayvec = { version = "0.7", default-features = false }
as-slice = "0.2"
bytemuck = "1"
bytemuck_derive = "1.4"
cfg-if = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
crc = "3"
critical-section = "1"
defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "defmt", "nightly", "executor-thread"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-pac", "time-driver-rtc1", "gpiote", "defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "generic-queue-8", "defmt"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"], optional = true}
embedded-alloc = "0.5"
embedded-storage = "0.3"
embedded-storage-async = "0.4"
fix-hidden-lifetime-bug = "0.2.5"
median = { version = "0.3", default-features = false }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = ["s113", "ble-gatt-server", "ble-peripheral", "critical-section-impl", "defmt", "nightly"] }
nrf52832-hal = { version = "0.16.0", default-features = false, optional = true }
nrf52840-hal = { version = "0.16.0", default-features = false, optional = true }
num = { version = "0.4", default-features = false }
once_cell = { version = "1.18", default-features = false, features = ["critical-section"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8", default-features = false, features = ["nightly"] }
static_cell = { version = "1", features = ["nightly"] }
typenum = "1"

[features]
console = ["dep:embassy-usb"]
nrf52832 = ["dep:nrf52832-hal", "nrf-softdevice/nrf52832", "embassy-nrf/nrf52832", "embassy-nrf/nfc-pins-as-gpio"]
nrf52840 = ["dep:nrf52840-hal", "nrf-softdevice/nrf52840", "embassy-nrf/nrf52840"]
default = ["nrf52832"]

[profile.release]
# 1 minimum for backtraces?
# 2 allows for location information for each defmt print
debug = 2
