[package]
name = "hangman"
version = "0.1.0"
authors = ["Kesavan Yogeswaran"]
edition = "2021"

[dependencies]
aligned = "0.4"
arrayvec = { version = "0.7", default-features = false }
as-slice = "0.2"
bytemuck = "1.14"
bytemuck_derive = "1.5"
cfg-if = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
crc = "3"
critical-section = "1"
defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-futures = { version = "0.1", features = ["defmt"] }
embassy-nrf = { version = "0.1", features = ["unstable-pac", "time-driver-rtc1", "gpiote", "defmt"] }
embassy-sync = { version = "0.5", features = ["defmt"] }
embassy-time = { version = "0.3", features = ["generic-queue-8", "defmt"] }
embassy-usb = { version = "0.1", features = ["defmt"], optional = true}
embedded-alloc = "0.5"
embedded-storage = "0.3"
embedded-storage-async = "0.4"
hex = { version = "0.4", default-features = false }
median = { version = "0.3", default-features = false }
nrf-softdevice = { version = "0.1", features = ["s113", "ble-gatt-server", "ble-peripheral", "critical-section-impl", "defmt"] }
nrf52832-hal = { version = "0.16", default-features = false, optional = true }
nrf52840-hal = { version = "0.16", default-features = false, optional = true }
num = { version = "0.4", default-features = false }
once_cell = { version = "1.18", default-features = false, features = ["critical-section"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8", default-features = false, features = ["nightly"] }
static_cell = { version = "1", features = ["nightly"] }
typenum = "1.17"

[features]
console = ["dep:embassy-usb"]
nrf52832 = ["dep:nrf52832-hal", "nrf-softdevice/nrf52832", "embassy-nrf/nrf52832", "embassy-nrf/nfc-pins-as-gpio"]
nrf52840 = ["dep:nrf52840-hal", "nrf-softdevice/nrf52840", "embassy-nrf/nrf52840"]
default = ["nrf52832"]

[profile.release]
# 1 minimum for backtraces?
# 2 allows for location information for each defmt print
debug = 2
